idea jre args tweak